tests/snapshots/examples_fixtures/io__aoc_day11_part2.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/io/aoc_day11_part2.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E004]: UNDEFINED VARIABLE

I can't find a value named `dfs_count2`.

  --> examples/io/aoc_day11_part2.flx:91:13
   |
91 |     let r = dfs_count2(nxt, seen_dac, seen_fft, graph, memo)
   |             ^^^^^^^^^^

Hint:
  Define it first: let dfs_count2 = ...;
== stdout ==
<not executed>
